added photos (2x-sizes) for desktop layout of popular categoris

--- a/index.html
+++ b/index.html
@@ -279,6 +279,23 @@
           <ul class="list list-categories">
             <li class="item-categories">
               <picture>
+                <!-- desktop  -->
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-beds.png    1x,
+                    ./images/popular-categoris/desktop-beds-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-beds.webp    1x,
+                    ./images/popular-categoris/desktop-beds-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
                 <!-- mobile  -->
                 <source
                   media="(max-width:1319px)"
@@ -312,6 +329,23 @@
             </li>
             <li class="item-categories">
               <picture>
+                <!-- desktop  -->
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-matresses.png    1x,
+                    ./images/popular-categoris/desktop-matresses-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-matresses.webp    1x,
+                    ./images/popular-categoris/desktop-matresses-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
                 <!-- mobile  -->
                 <source
                   media="(max-width:1319px)"
@@ -345,6 +379,23 @@
             </li>
             <li class="item-categories">
               <picture>
+                <!-- desktop -->
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-soft-furniture.png    1x,
+                    ./images/popular-categoris/desktop-soft-furniture-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-soft-furniture.webp    1x,
+                    ./images/popular-categoris/desktop-soft-furniture-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
                 <!-- mobile  -->
                 <source
                   media="(max-width:1319px)"
@@ -378,6 +429,23 @@
             </li>
             <li class="item-categories">
               <picture>
+                <!-- desktop -->
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-wardrodes.png    1x,
+                    ./images/popular-categoris/desktop-wardrodes-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-wardrodes.webp    1x,
+                    ./images/popular-categoris/desktop-wardrodes-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
                 <!-- mobile  -->
                 <source
                   media="(max-width:1319px)"
@@ -411,6 +479,23 @@
             </li>
             <li class="item-categories">
               <picture>
+                <!-- desktop  -->
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-comodes.png    1x,
+                    ./images/popular-categoris/desktop-comodes-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-comodes.webp    1x,
+                    ./images/popular-categoris/desktop-comodes-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
                 <!-- mobile  -->
                 <source
                   media="(max-width:1319px)"
@@ -444,6 +529,23 @@
             </li>
             <li class="item-categories">
               <picture>
+                <!-- desktop  -->
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-thumbs.png    1x,
+                    ./images/popular-categoris/desktop-thumbs-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-thumbs.webp    1x,
+                    ./images/popular-categoris/desktop-thumbs-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
                 <!-- mobile  -->
                 <source
                   media="(max-width:1319px)"
@@ -477,6 +579,24 @@
             </li>
             <li class="item-categories">
               <picture>
+                <!-- desktop  -->
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-tables.png    1x,
+                    ./images/popular-categoris/desktop-tables-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-tables.webp    1x,
+                    ./images/popular-categoris/desktop-tables-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <!-- mobile  -->
                 <source
                   media="(max-width:1319px)"
                   srcset="
@@ -509,6 +629,24 @@
             </li>
             <li class="item-categories">
               <picture>
+                <!-- desktop  -->
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-chairs.png    1x,
+                    ./images/popular-categoris/desktop-chairs-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-chairs.webp    1x,
+                    ./images/popular-categoris/desktop-chairs-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <!-- mobile  -->
                 <source
                   media="(max-width:1319px)"
                   srcset="
@@ -541,6 +679,24 @@
             </li>
             <li class="item-categories">
               <picture>
+                <!-- desktop  -->
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-furniture-walls.png    1x,
+                    ./images/popular-categoris/desktop-furniture-walls-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-furniture-walls.webp    1x,
+                    ./images/popular-categoris/desktop-furniture-walls-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <!-- mobile  -->
                 <source
                   media="(max-width:1319px)"
                   srcset="
@@ -563,7 +719,9 @@
                   class="img-categories"
                 />
               </picture>
-              <h3 class="description title-descr">Меблеві <span class="furniture-walls">стіни</span></h3>
+              <h3 class="description title-descr">
+                Меблеві <span class="furniture-walls">стіни</span>
+              </h3>
               <p class="description amount">24</p>
               <a class="icon-large link-categories">
                 <svg class="icons-categories">
@@ -573,6 +731,24 @@
             </li>
             <li class="item-categories">
               <picture>
+                <!-- desktop  -->
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-kitchens.png    1x,
+                    ./images/popular-categoris/desktop-kitchens-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-categoris/desktop-kitchens.webp    1x,
+                    ./images/popular-categoris/desktop-kitchens-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <!-- mobile  -->
                 <source
                   media="(max-width:1319px)"
                   srcset="
