changed class of icon-search (basket)

--- a/index.html
+++ b/index.html
@@ -152,17 +152,17 @@
             </div>
 
             <div class="header-buttons">
-              <button type="button" class="icon-large obrane-korzina">
+              <button type="button" class="icon-large obrane">
                 <svg class="icon-header">
                   <use href="./images/sprite.svg#obrane-header"></use>
                 </svg>
               </button>
-              <button type="button" class="icon-large obrane-korzina">
+              <button type="button" class="icon-large obrane">
                 <svg class="icon-header">
                   <use href="./images/sprite.svg#korzina-heder"></use>
                 </svg>
               </button>
-              <button type="button" class="icon-large obrane-korzina">
+              <button type="button" class="icon-large obrane basket">
                 <svg class="icon-header">
                   <use href="./images/sprite.svg#icon-search"></use>
                 </svg>
