changed another format of photos (png) of "popular-products"

--- a/index.html
+++ b/index.html
@@ -773,10 +773,10 @@
                 <source
                   media="(min-width:1320px)"
                   srcset="
-                    ./images/popular-products/desktop-bed-sparta.jpg    1x,
-                    ./images/popular-products/desktop-bed-sparta-2x.jpg 2x
+                    ./images/popular-products/desktop-bed-sparta.png    1x,
+                    ./images/popular-products/desktop-bed-sparta-2x.png 2x
                   "
-                  type="image/jpg"
+                  type="image/png"
                 />
                 <source
                   media="(min-width:1320px)"
@@ -790,10 +790,10 @@
                 <source
                   media="(max-width:1319px)"
                   srcset="
-                    ./images/popular-products/mobile-bed-sparta.jpg    1x,
-                    ./images/popular-products/mobile-bed-sparta-2x.jpg 2x
+                    ./images/popular-products/mobile-bed-sparta.png    1x,
+                    ./images/popular-products/mobile-bed-sparta-2x.png 2x
                   "
-                  type="image/jpg"
+                  type="image/png"
                 />
                 <source
                   media="(max-width:1319px)"
@@ -804,7 +804,7 @@
                   type="image/webp"
                 />
                 <img
-                  src="./images/popular-products/mobile-bed-sparta.jpg"
+                  src="./images/popular-products/mobile-bed-sparta.png"
                   alt="ліжко-спарта"
                 />
               </picture>
@@ -855,10 +855,10 @@
                 <source
                   media="(min-width:1320px)"
                   srcset="
-                    ./images/popular-products/desktop-bed-argon.jpg    1x,
-                    ./images/popular-products/desktop-bed-argon-2x.jpg 2x
+                    ./images/popular-products/desktop-bed-argon.png    1x,
+                    ./images/popular-products/desktop-bed-argon-2x.png 2x
                   "
-                  type="image/jpg"
+                  type="image/png"
                 />
                 <source
                   media="(min-width:1320px)"
@@ -872,10 +872,10 @@
                 <source
                   media="(max-width:1319px)"
                   srcset="
-                    ./images/popular-products/mobile-bed-argon.jpg    1x,
-                    ./images/popular-products/mobile-bed-argon-2x.jpg 2x
+                    ./images/popular-products/mobile-bed-argon.png    1x,
+                    ./images/popular-products/mobile-bed-argon-2x.png 2x
                   "
-                  type="image/jpg"
+                  type="image/png"
                 />
                 <source
                   media="(max-width:1319px)"
@@ -886,7 +886,7 @@
                   type="image/webp"
                 />
                 <img
-                  src="./images//popular-products//mobile-bed-argon.jpg"
+                  src="./images//popular-products//mobile-bed-argon.png"
                   alt="ліжко-аргон"
                 />
               </picture>
@@ -934,10 +934,10 @@
                 <source
                   media="(min-width:1320px)"
                   srcset="
-                    ./images/popular-products/desktop-bed-prestige.jpg    1x,
-                    ./images/popular-products/desktop-bed-prestige-2x.jpg 2x
+                    ./images/popular-products/desktop-bed-prestige.png    1x,
+                    ./images/popular-products/desktop-bed-prestige-2x.png 2x
                   "
-                  type="image/jpg"
+                  type="image/png"
                 />
                 <source
                   media="(min-width:1320px)"
@@ -951,10 +951,10 @@
                 <source
                   media="(max-width:1319px)"
                   srcset="
-                    ./images/popular-products/mobile-bed-prestige.jpg    1x,
-                    ./images/popular-products/mobile-bed-prestige-2x.jpg 2x
+                    ./images/popular-products/mobile-bed-prestige.png    1x,
+                    ./images/popular-products/mobile-bed-prestige-2x.png 2x
                   "
-                  type="image/jpg"
+                  type="image/png"
                 />
                 <source
                   media="(max-width:1319px)"
@@ -965,7 +965,7 @@
                   type="image/webp"
                 />
                 <img
-                  src="./images/popular-products/mobile-bed-prestige.jpg"
+                  src="./images/popular-products/mobile-bed-prestige.png"
                   alt="ліжко-престиж"
                 />
               </picture>
@@ -1013,10 +1013,10 @@
                 <source
                   media="(min-width:1320px)"
                   srcset="
-                    ./images/popular-products/desktop-sofa-tokio-2.jpg    1x,
-                    ./images/popular-products/desktop-sofa-tokio-2-2x.jpg 2x
+                    ./images/popular-products/desktop-sofa-tokio-2.png    1x,
+                    ./images/popular-products/desktop-sofa-tokio-2-2x.png 2x
                   "
-                  type="image/jpg"
+                  type="image/png"
                 />
                 <source
                   media="(min-width:1320px)"
@@ -1030,10 +1030,10 @@
                 <source
                   media="(max-width:1319px)"
                   srcset="
-                    ./images/popular-products/mobile-sofa-tokio-2.jpg    1x,
-                    ./images/popular-products/mobile-sofa-tokio-2-2x.jpg 2x
+                    ./images/popular-products/mobile-sofa-tokio-2.png    1x,
+                    ./images/popular-products/mobile-sofa-tokio-2-2x.png 2x
                   "
-                  type="image/jpg"
+                  type="image/png"
                 />
                 <source
                   media="(max-width:1319px)"
@@ -1044,7 +1044,7 @@
                   type="image/webp"
                 />
                 <img
-                  src="./images//popular-products/mobile-sofa-tokio-2.jpg"
+                  src="./images//popular-products/mobile-sofa-tokio-2.png"
                   alt="диван токіо-2"
                 />
               </picture>
@@ -1087,12 +1087,46 @@
           </li>
           <li class="item-products">
             <a href="#" class="product-card">
-              <img
-                src="./images/popular-products/matrass-largo.jpg"
-                alt="матрац ларго"
-                width="260"
-                height="220"
-              />
+              <picture>
+                <!-- desktop  -->
+                <source
+                  media="(min-width:1319px)"
+                  srcset="
+                    ./images/popular-products/desktop-matrass-largo.png    1x,
+                    ./images/popular-products/desktop-matrass-largo-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(min-width:1319px)"
+                  srcset="
+                    ./images/popular-products/desktop-matrass-largo.webp    1x,
+                    ./images/popular-products/desktop-matrass-largo-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <!-- mobile  -->
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-products/mobile-matrass-largo.png    1x,
+                    ./images/popular-products/mobile-matrass-largo-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-products/mobile-matrass-largo.webp    1x,
+                    ./images/popular-products/mobile-matrass-largo-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  src="./images/popular-products/mobile-matrass-largo.png"
+                  alt="матрац ларго"
+                />
+              </picture>
             </a>
             <div class="product-information">
               <p class="size">Розмір: 61 x 184 x 2130 мм</p>
@@ -1133,12 +1167,46 @@
           </li>
           <li class="item-products">
             <a href="#" class="product-card">
-              <img
-                src="./images/popular-products/matrass-argentum.jpg"
-                alt="матрац аргентум"
-                width="260"
-                height="220"
-              />
+              <picture>
+                <!-- desktop  -->
+                <source
+                  media="(min-width:1319px)"
+                  srcset="
+                    ./images/popular-products/desktop-matrass-argentum.png    1x,
+                    ./images/popular-products/desktop-matrass-argentum-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(min-width:1319px)"
+                  srcset="
+                    ./images/popular-products/desktop-matrass-argentum.webp    1x,
+                    ./images/popular-products/desktop-matrass-argentum-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <!-- mobile  -->
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-products/mobile-matrass-argentum.png    1x,
+                    ./images/popular-products/mobile-matrass-argentum-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-products/mobile-matrass-argentum.webp    1x,
+                    ./images/popular-products/mobile-matrass-argentum-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  src="./images//popular-products/mobile-matrass-argentum.png"
+                  alt="матрац аргентум"
+                />
+              </picture>
             </a>
             <div class="product-information">
               <p class="size">Розмір: 61 x 184 x 2130 мм</p>
@@ -1181,12 +1249,46 @@
           </li>
           <li class="item-products">
             <a href="#" class="product-card">
-              <img
-                src="./images/popular-products/sofa-bravo.jpg"
-                alt="диван браво"
-                width="260"
-                height="220"
-              />
+              <picture>
+                <!-- desktop -->
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-products/desktop-sofa-bravo.png    1x,
+                    ./images/popular-products/desktop-sofa-bravo-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-products/desktop-sofa-bravo.webp    1x,
+                    ./images/popular-products/desktop-sofa-bravo-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <!-- mobile  -->
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-products/mobile-sofa-bravo.png    1x,
+                    ./images/popular-products/mobile-sofa-bravo-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-products/mobile-sofa-bravo.webp    1x,
+                    ./images/popular-products/mobile-sofa-bravo-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  src="./images//popular-products/mobile-sofa-bravo.png"
+                  alt="диван браво"
+                />
+              </picture>
             </a>
             <div class="product-information">
               <p class="size">Розмір: 61 x 184 x 2130 мм</p>
@@ -1226,12 +1328,46 @@
           </li>
           <li class="item-products">
             <a href="#" class="product-card">
-              <img
-                src="./images/popular-products/bed-mk-5.jpg"
-                alt="ліжко мк-5"
-                width="260"
-                height="220"
-              />
+              <picture>
+                <!-- desktop  -->
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-products/desktop-mk-5.png    1x,
+                    ./images/popular-products/desktop-mk-5-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(min-width:1320px)"
+                  srcset="
+                    ./images/popular-products/desktop-mk-5.webp    1x,
+                    ./images/popular-products/desktop-mk-5-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <!-- mobile  -->
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-products/mobile-mk-5.png    1x,
+                    ./images/popular-products/mobile-mk-5-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-products/mobile-mk-5.webp    1x,
+                    ./images/popular-products/mobile-mk-5-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  src="./images/popular-products//mobile-mk-5.png"
+                  alt="ліжко мк-5"
+                />
+              </picture>
             </a>
             <div class="product-information">
               <p class="size">Розмір: 61 x 184 x 2130 мм</p>
