--- a/index.html
+++ b/index.html
@@ -1406,6 +1406,11 @@
             </div>
           </li>
         </ul>
+        <button type="button" class="button-products">
+          <svg width="24" height="24">
+            <use href="./images//sprite.svg#reload"></use>
+          </svg>
+          Показати ще товари</button>
       </div>
     </section>
     <!-- АКЦІЇ -->
