changed another path of index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <body>
     <!-- ХЕДЕР -->
-    <!-- <header class="header">
+    <header class="header">
       <nav class="container header-container">
         <div class="about-help">
           <ul class="list list-about">
@@ -86,16 +86,16 @@
               </li>
             </ul>
           </div>
-        </div> -->
+        </div> 
     <!-- ДАЛІ БУДЕ ФОРМА- ЯК ДОЙДУ ДО ФОРМ - ТОДІ ЗРОБЛЮ -->
-    <!-- <div class="header-bg">
+    <div class="header-bg">
           <div class="header-middle">
             <button type="button" class="burger-button">
               <svg class="burger-icon">
                 <use href="./images/sprite.svg#burger-icon"></use>
               </svg>
             </button>
-            <a href="./index.html" class="link-header">
+            <a href="/index.html" class="link-header">
               <svg class="logo-header">
                 <use href="./images/sprite.svg#logo-header"></use>
               </svg>
@@ -123,7 +123,7 @@
                   <use href="./images/sprite.svg#search"></use>
                 </svg>
               </button>
-            </form> -->
+            </form> 
     <!-- ДАЛЫ ФОРМА-ПОШУК ТОВАРЫВ -->
     <!-- <div class="main-feedback">
               <button type="button" class="icon-large icon-button">
