return path of index

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <use href="./images/sprite.svg#burger-icon"></use>
               </svg>
             </button>
-            <a href="/index.html" class="link-header">
+            <a href="./index.html" class="link-header">
               <svg class="logo-header">
                 <use href="./images/sprite.svg#logo-header"></use>
               </svg>
